// SonarQube, open source software quality management tool.
// Copyright (C) 2008-2016 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarQube is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarQube is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

syntax = "proto2";

package sonarqube.ws.almsetting;

option java_package = "org.sonarqube.ws";
option java_outer_classname = "AlmIntegrations";
option optimize_for = SPEED;

// WS api/alm_integrations/search_bibucketserver_repos
message SearchBitbucketserverReposWsResponse {
  optional bool isLastPage = 1;
  repeated BBSRepo repositories = 2;
}

// WS api/alm_integrations/list_bibucketserver_projects
message ListBitbucketserverProjectsWsResponse {
  repeated BBSProject projects = 1;
}

message BBSRepo {
  optional string slug = 1;
  optional int64 id = 2;
  optional string name = 3;
  optional string sqProjectKey = 4;
  optional string projectKey = 5;
}

message BBSProject {
  optional string key = 1;
  optional string name = 2;
}
